--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (3.2.0-1pexip1) precise; urgency=low
+
+  * Prepare Pexip backport
+
+ -- John-Mark Bell <jmb@pexip.com>  Fri, 25 Oct 2013 15:54:33 +0100
+
 rabbitmq-server (3.2.0-1) unstable; urgency=low
 
   * New upstream release
