Improve logging on shutdown

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (3.3.5-1.1pexip3) pexip; urgency=low
+
+  * Improve shutdown logging.
+
+ -- Colin Bradbury <colin@pexip.com>  Thu, 15 Dec 2016 13:18:08 +0000
+
 rabbitmq-server (3.3.5-1.1pexip2) pexip; urgency=low
 
   * Require newer Erlang.
@@ -22,7 +28,7 @@ rabbitmq-server (3.3.5-1) unstable; urgency=low
   * New upstream release:
     - Provides unminimized versions of all bundled Javascript
       libraries (Closes: #736781).
-  * d/control: Added Blair Hester to Uploaders, dropped Emile Joubert 
+  * d/control: Added Blair Hester to Uploaders, dropped Emile Joubert
     (thanks for all your work Emile!).
 
  -- Blair Hester <bhester@gopivotal.com>  Tue, 12 Aug 2014 11:47:14 +0100
@@ -240,7 +246,7 @@ rabbitmq-server (2.6.1-1) unstable; urgency=low
 
 rabbitmq-server (2.5.0-1) unstable; urgency=low
 
-  * New upstream release 
+  * New upstream release
 
  -- John Leuner <jewel@debian.org>  Thu, 16 Jun 2011 09:55:40 +0200
 
@@ -334,7 +340,7 @@ rabbitmq-server (1.5.5-3) unstable; urgency=low
 rabbitmq-server (1.5.5-2) unstable; urgency=low
 
   * Include updates to debian package by rabbit team:
-    - quiet log rotate 
+    - quiet log rotate
     - update build-depends and depends for new erlang packages
     - debian/watch file
     - add rabbitmq-script-wrapper
@@ -384,10 +390,10 @@ rabbitmq-server (1.5.0-4) unstable; urgency=low
 
   * Clarify and explicitly list the license and copyright for
     codegen/amqp-0.8.json
-	
+
   * Explicitly list the authors and copyright for the rest of the codebase
     at the top of debian/copyright
-	
+
   * Clarify the copyright of the files in src/tcp_* . The rabbitmq authors have
     confirmed that they are the original authors of this code and that the
     files at http://code.google.com/p/cacherl/ were taken without their
