--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (3.3.5-1.1pexip4) pexip; urgency=low
+
+  * Add Erlang shutdown timeout flag.
+
+ -- Colin Bradbury <colin@pexip.com>  Mon, 19 Dec 2016 12:53:22 +0000
+
 rabbitmq-server (3.3.5-1.1pexip3) pexip; urgency=low
 
   * Improve shutdown logging.
