--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (3.3.5-1.1+deb8u1) jessie-security; urgency=medium
+
+  * CVE-2016-9877: apply backported upstream patch (Closes: #849849).
+
+ -- Thomas Goirand <zigo@debian.org>  Wed, 11 Jan 2017 02:17:32 +0100
+
 rabbitmq-server (3.3.5-1.1) testing-proposed-updates; urgency=medium
 
   * Non-maintainer upload.
