--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (3.3.5-1.1pexip8) pexip; urgency=low
+
+  * Fix up install rules
+
+ -- Colin Bradbury <colin@pexip.com>  Mon, 06 Feb 2017 13:56:53 +0000
+
 rabbitmq-server (3.3.5-1.1pexip7) pexip; urgency=low
 
   * Introduce upgrade helper package
