--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (3.3.5-1.1pexip2+v13u1) pexip; urgency=low
+
+  * Backport to v13
+
+ -- John-Mark Bell <jmb@pexip.com>  Thu, 09 Mar 2017 12:15:52 +0000
+
 rabbitmq-server (3.3.5-1.1pexip9) pexip; urgency=low
 
   * Fix up preinst policy checks.
