--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (3.6.6-1pexip1) pexip; urgency=medium
+
+  * Migrate to Stretch
+
+ -- Vincent Sanders <vince@pexip.com>  Wed, 25 Jul 2018 15:54:05 +0000
+
 rabbitmq-server (3.6.6-1) unstable; urgency=medium
 
   [ Ondřej Nový ]
