--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (3.6.6-1pexip2) pexip; urgency=medium
+
+  * Drop redundant hosts massaging from postinst
+
+ -- John-Mark Bell <jmb@pexip.com>  Mon, 12 Nov 2018 12:12:07 +0000
+
 rabbitmq-server (3.6.6-1pexip1) pexip; urgency=medium
 
   * Migrate to Stretch
