--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (3.6.6-1pexip3) pexip; urgency=medium
+
+  * Changed systemd service to restart on exit
+
+ -- Michael Oultram <michael.oultram@pexip.com>  Tue, 19 Feb 2019 10:23:08 +0000
+
 rabbitmq-server (3.6.6-1pexip2) pexip; urgency=medium
 
   * Drop redundant hosts massaging from postinst
