Drop build-dep on locales-all

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (3.7.8-4pexip2) pexip; urgency=medium
+
+  * Drop build-dep on locales-all
+
+ -- Steve McIntyre <steve.mcintyre@pexip.com>  Tue, 07 Jul 2020 12:15:40 +0100
+
 rabbitmq-server (3.7.8-4pexip1) pexip; urgency=medium
 
   * Migrate to Buster
