--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (3.7.8-4pexip3) pexip; urgency=medium
+
+  * Add patch to prevent NameError crash
+
+ -- Huw Jones <huw@pexip.com>  Wed, 31 Mar 2021 15:20:01 +0100
+
 rabbitmq-server (3.7.8-4pexip2) pexip; urgency=medium
 
   * Drop build-dep and runtime dep on locales-all
