--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (3.8.9-3pexip2) pexip-bullseye; urgency=medium
+
+  * Main bullseye build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Fri, 24 Jun 2022 14:04:41 +0100
+
 rabbitmq-server (3.8.9-3pexip1) pexip; urgency=medium
 
   * Initial bullseye build
