--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (3.10.8-1.1pexip3) pexip-bookworm; urgency=medium
+
+  * Initial bookworm build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 16 Nov 2023 10:27:52 +0000
+
 rabbitmq-server (3.10.8-1.1pexip2) pexip; urgency=medium
 
   * Merge openssl3 changes to bullseye
