Bookworm build for product distribution

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (3.10.8-1.1+deb12u1pexip2) pexip-bookworm; urgency=medium
+
+  * Bookworm build for product distribution
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Sat, 09 Dec 2023 22:57:59 +0000
+
 rabbitmq-server (3.10.8-1.1+deb12u1pexip1) pexip-bookworm; urgency=medium
 
   * New upstream release.
