--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (3.10.8-1.1+deb12u1pexip4) pexip-bookworm; urgency=medium
+
+  * No-change rebuild to stay ahead of bullseye
+
+ -- Steve McIntyre <steve.mcintyre@pexip.com>  Tue, 16 Jan 2024 16:47:45 +0000
+
 rabbitmq-server (3.10.8-1.1+deb12u1pexip2) pexip-bookworm; urgency=medium
 
   * Bookworm build for product distribution
