--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitmq-server (3.10.8-1.1+deb12u1+pexip24u5) pexip-bookworm; urgency=medium
+
+  * New versioning scheme
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 01 Feb 2024 16:28:06 +0000
+
 rabbitmq-server (3.10.8-1.1+deb12u1pexip4) pexip-bookworm; urgency=medium
 
   * No-change rebuild to stay ahead of bullseye
